✨ feat: Adding 404 error page

--- a/monthly_challenges/challenges/templates/challenges/dashboard.html
+++ b/monthly_challenges/challenges/templates/challenges/dashboard.html
@@ -6,5 +6,10 @@
 
     {% block content %}
         <h1>These are our monthly challenges!</h1>
-        {% include 'components/list.html' with months=months %}
+        
+        <ul>
+            {% for month in months %}
+                {% include 'components/list.html' with month=month %}
+            {% endfor %}
+        </ul>
     {% endblock content %}
