✨ feat: Adding static files

--- a/monthly_challenges/challenges/templates/challenges/dashboard.html
+++ b/monthly_challenges/challenges/templates/challenges/dashboard.html
@@ -1,8 +1,13 @@
 {% extends 'layout/base.html' %}
+{% load static %}
 
     {% block page_title %}
         Dashboard
     {% endblock page_title %}
+
+    {% block css_files %}
+        <link rel="stylesheet" href="{% static 'challenges/css/dashboard.css' %}">
+    {% endblock css_files %}        
 
     {% block content %}
         <h1>These are our monthly challenges!</h1>
