--- a/my_site/blog/templates/blog/components/post.html
+++ b/my_site/blog/templates/blog/components/post.html
@@ -1,11 +1,16 @@
 {% load static %}
 
 <div class="card">
-    <a href="{% url 'single_post' post.slug %}">
+    <a href="{% url 'single_post' post.id post.slug %}">
         <div class="card__top">
-            <img src="{% static 'blog/assets/posts/' %}{{ post.image }}" class="card__img">
+            <img src="{% static 'blog/assets/posts/' %}{{ post.image_name }}" class="card__img">
             <h5 class="card__title">{{ post.title }}</h5>
         </div>
         <p class="card__description">{{ post.description }}</p>
+        <ul class="card__tags">
+            {% for tag in tags %}
+                <li class="card__tag">{{ tag.caption }}</li>
+            {% endfor %}
+        </ul>
     </a>
 </div>
